# chippity

./: .gitignore  Cargo.toml  LICENSE  README  chip8.md  chippity.md
src/: chip8.rs  emulator.rs  instruction.rs  io_controller.rs  io_device.rs  main.rs
src/chip8/: instruction.rs  mod.rs
src/driver/: ansiterm.rs  minifb.rs  mod.rs  rodio.rs  termion.rs
