[package]
name = "chippity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11"
bitvec = "1"
smallvec = "1.13"
fastrand = "2.0"
lexopt = "0.3"
minifb = "0.25"
termion = "3.0"
rodio = "0.17"
